# telegram_bots_api

./: Cargo.toml  README.md  postman.json
.github/: codecov.yml
.github/draft/: settings.yml  test.yml
.github/workflows/: check.yml  codecov_report.yml  features.yml  lints.yml  msrv.yml  rolling.yml  rust.yml  scheduled.yml  test.yml  tests.yml
examples/: bot.rs  hyper.rs  playground.rs
examples/async/: get_me.rs  playground.rs
examples/sync/: get_me.rs  playground.rs
src/: api.rs  client.rs  config.rs  errors.rs  lib.rs
src/api/: enums.rs  errors.rs  mod.rs  params.rs  request.rs  requests.rs  response.rs  responses.rs  structs.rs  sync.rs  types.rs
src/api/enums/: allowed_updates.rs  background_fill.rs  background_fills.rs  background_type.rs  background_types.rs  bot_command_scope.rs  bot_command_scopes.rs  bot_commands.rs  chat_action.rs  chat_actions.rs  chat_boost_source.rs  chat_member.rs  chat_uid.rs  file_input.rs  inline_query_result.rs  input_media.rs  input_message_content.rs  input_paid_media.rs  maybe_inaccessible_message.rs  media_input.rs  menu_button.rs  menu_buttons.rs  message_origin.rs  message_result.rs  paid_media.rs  passport_element_error.rs  reaction_type.rs  reply_markup.rs  revenue_withdrawal_state.rs  transaction_partner.rs
src/api/params/: add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  answer_web_app_query.rs  approve_chat_join_request.rs  ban_chat_member.rs  ban_chat_sender_chat.rs  close_forum_topic.rs  close_general_forum_topic.rs  copy_message.rs  copy_messages.rs  create_chat_invite_link.rs  create_chat_subscription_invite_link.rs  create_forum_topic.rs  create_invoice_link.rs  create_new_sticker_set.rs  decline_chat_join_request.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_forum_topic.rs  delete_message.rs  delete_messages.rs  delete_my_commands.rs  delete_sticker_from_set.rs  delete_sticker_set.rs  delete_webhook.rs  edit_chat_invite_link.rs  edit_chat_subscription_invite_link.rs  edit_forum_topic.rs  edit_general_forum_topic.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  forward_messages.rs  (+81 more)
src/api/requests/: async.rs  sync.rs
src/api/responses/: error.rs  parameters.rs  result.rs
src/api/structs/: animation.rs  audio.rs  background_fill_freeform_gradient.rs  background_fill_gradient.rs  background_fill_solid.rs  background_type_chat_theme.rs  background_type_fill.rs  background_type_pattern.rs  background_type_wallpaper.rs  birthdate.rs  bot_command.rs  bot_command_scope_all_chat_administrators.rs  bot_command_scope_all_group_chats.rs  bot_command_scope_all_private_chats.rs  bot_command_scope_chat.rs  bot_command_scope_chat_administrators.rs  bot_command_scope_chat_member.rs  bot_command_scope_default.rs  bot_description.rs  bot_name.rs  bot_short_description.rs  business_connection.rs  business_intro.rs  business_location.rs  business_message_deleted.rs  business_opening_hours.rs  business_opening_hours_interval.rs  callback_game.rs  callback_query.rs  chat.rs  chat_administrator_rights.rs  chat_background.rs  chat_boost.rs  chat_boost_added.rs  chat_boost_removed.rs  chat_boost_source_gift_code.rs  chat_boost_source_giveaway.rs  chat_boost_source_premium.rs  chat_boost_updated.rs  chat_full_info.rs  (+167 more)
src/api/types/: animation.rs  audio.rs  bot_command.rs  bot_command_scope.rs  bot_command_scope_all_chat_administrators.rs  bot_command_scope_all_group_chats.rs  bot_command_scope_all_private_chats.rs  bot_command_scope_chat.rs  bot_command_scope_chat_administrators.rs  bot_command_scope_chat_member.rs  bot_command_scope_default.rs  bot_description.rs  bot_name.rs  bot_short_description.rs  callback_game.rs  callback_query.rs  channel_username.rs  chat.rs  chat_administrator_rights.rs  chat_boost.rs  chat_boost_added.rs  chat_boost_removed.rs  chat_boost_source.rs  chat_boost_source_gift_code.rs  chat_boost_source_giveaway.rs  chat_boost_source_premium.rs  chat_boost_updated.rs  chat_id.rs  chat_invite_link.rs  chat_join_request.rs  chat_location.rs  chat_member.rs  chat_member_administrator.rs  chat_member_banned.rs  chat_member_left.rs  chat_member_member.rs  chat_member_owner.rs  chat_member_restricted.rs  chat_member_updated.rs  chat_permissions.rs  (+144 more)
src/clients/: async.rs  blocking.rs  mod.rs  reqwest.rs  sync.rs  traits.rs
src/tests/: client.rs  config.rs  errors.rs  helpers.rs  mod.rs
src/tests/clients/: async.rs  mod.rs  sync.rs
src/tests/helpers/: mocked_async.rs  mocked_sync.rs  mod.rs
(+85 files in other folders)
