# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "telegram_bots_api"
edition = "2021"
rust-version = "1.74.0"
version = "0.79.0"
license = "MIT"
description = "Telegram bots api simple rust wrapper, and no more."
documentation = "https://docs.rs/telegram_bots_api"
homepage = "https://github.com/khusnetdinov/telegram_bots_api"
repository = "https://github.com/khusnetdinov/telegram_bots_api"
keywords = ["telegram", "bots", "api"]
authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]

[package.metadata]
talegram-version = "7.9"

[features]
nightly = []
default = ['async']
all = ["async", "sync"]
async = ["dep:async-trait", "dep:tokio"]
sync = []

[dependencies]
structopt = "0.3.26"
mockito = "1.2.0"
serde = {  version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_qs = "0.12.0"
serde_with_macros = "3.6.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }
async-trait = { version = "0.1.77", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7.3", features = ["codec"] }

# cargo-minimal-versions
cargo-minimal-versions = { version = "0.1.25", optional = true }
openssl = { version = "0.10.66", optional = true }
libgit2-sys = { version = "^0.16.2", optional = true }
mio = "0.8.11"

[[example]]
required-features = ["async"]
name = "async-playground"
path = "examples/async/playground.rs"

[[example]]
required-features = ["async"]
name = "async-get-me"
path = "examples/async/get_me.rs"

[[example]]
required-features = ["sync"]
name = "sync-playground"
path = "examples/sync/playground.rs"

[[example]]
required-features = ["sync"]
name = "sync-get-me"
path = "examples/sync/get_me.rs"
